# koval

./: .gitignore  Cargo.toml  Trunk.toml  package.json  rustfmt.toml  tailwind.config.js
.github/workflows/: cloudflarepages.yml  static.yml
crates/leptos-tw-ui/: Cargo.toml
crates/leptos-tw-ui/src/components/: container.rs  footer.rs  header.rs  icons.rs  typography.rs
crates/leptos-tw-ui/src/components/buttons/: button.rs
crates/leptos-tw-ui/src/components/menu/: bars.rs
crates/leptos-tw-ui/src/components/theme/: toggle.rs
crates/leptos-tw-ui/src/components/variants/: base.rs
site/: Cargo.toml  index.html
site/src/: app.rs  theme.rs
site/src/pages/: about.rs  guide.rs  home.rs  mod.rs  transliterator.rs
style/: input.css
wana_kana_rust/src/: to_romaji.rs
wana_kana_rust_fork/src/: to_romaji.rs  to_romaji_node_tree.rs
