[package]
name = "leptos-tw-ui"
version = { workspace = true }
edition = "2021"

[dependencies]
leptos = { version = "0.6.5", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlElement",
    "Document",
    "Storage",
    "MediaQueryList",
] }
